--- a/gb/ncid2000_5.md
+++ b/gb/ncid2000_5.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/3/n7797252.md#1" target="_blank">积阴德形神顿异 童子因祸得福</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/3/n7797252.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/Fotolia_29738288_Subscription_L-150x120.jpg" align ="left"></a>袁柳庄精通相术。偶访一位亲近的朋友，看见侍立旁边的童子，就劝朋友将童子遣走，说：“这个童子眼下有奇祸，将不利于主人。”朋友向来相信袁柳庄之术，于是遣走童子。童子哭着走了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年5月11日 8:12 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/2/n7794241.md#1" target="_blank">君子救人守义 上天巧解因缘</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/2/n7794241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601221601502483-150x120.jpg" align ="left"></a>官员听到后，拍着手称赞，说道：“不是具有高尚品德的君子，哪能做出这样的举动啊？”于是命两个考生结为兄弟，从此情同骨肉。后来两人一同金榜题名，考生返回故里，高兴地将妻子迎接回家，于是夫妇和好如初。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年5月9日 9:04 PM									</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/4/26/n7741136.md#1" target="_blank">王云廷不计荣辱 忠厚积德</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/4/26/n7741136.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/Fotolia_91915773_Subscription_L-e1459932673520-150x120.jpg" align ="left"></a>钱塘王文庄公的父亲叫王云廷，阴德甚厚。曾经在除夕的时候，有卖货的索要仆人的欠账。因为仆人已经到别的主人家了，王云廷公告之原因。卖货的贩突然大肆咆哮，王云廷公于是代替偿还。又一日，家人买笤帚，卖笤帚者的人走了以后又回来了，说是丢了一把笤帚，王云廷公以钱赔偿。卖笤帚的人者斜着眼睛说：“如果你没有藏笤帚，怎么能给我钱呢？”当时的人都嘲笑他，王云廷公却很怡然也。王云廷公还有很多类似的事情。后来王云廷公登雍正丙午乡试，王文庄公中乾隆乙丑探花，官至礼部尚书。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年5月3日 6:22 PM									</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/1/n7791460.md#1" target="_blank">忏悔必须在活着的时候</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/1/n7791460.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1409251223322525-150x120.jpg" align ="left"></a>书生问：“你们为什么不忏悔求解脱呢？”鬼说：“忏悔必须在还没死时，死后没有着力处了！”书生举着空瓶示意酒已喝光，众鬼都踉跄离去。中间一个鬼回头叮嘱说：“饿鬼能够喝到美酒，没有什么报答您的，谨以一句话奉赠：忏悔必须在活着的时候！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年5月3日 8:37 AM									</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/7/29/n8149875.md#1" target="_blank">真人转世白牛报恩</a><br></h3>老人非常感动。说自己遇到好人了，还说如果病好了呢，来年回报于你们，如果要死了呢，来世再还。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年8月3日 10:15 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/6/7/n7973755.md#1" target="_blank">二千年前造业 预言家看到轮回转世还业债</a><br></h3>美国“睡着的预言家”爱德加．凯西（Edgar Cayce,1877-1945），具有透视累世因缘解读病因的特异功能。凯西一生中解读了14,306个案例，发现“病”与“因果业报”的关系，报应不爽。中国古人就说“神目如电”，人在做天在看，做好事有好报，作恶遭恶报。凯西看到有人在罗马时代造的孽，在二十世纪当时仍在还。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年6月17日 7:57 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/5/25/n7931184.md#1" target="_blank">天门大开? 几人归去几人来？</a><br></h3>荡荡天门万古开，几人归去几人来？山河虽好非完璧，不信黄金是祸胎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年5月26日 3:27 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2000_6.md#1">下一页</a></h3></td></tr>
