--- a/gb/ncid278_8.md
+++ b/gb/ncid278_8.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11671359.md#1" target="_blank">10年冤狱 科技人才时绍平遭绑架 下落不明</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11671359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-12-150x120.jpg" align ="left"></a>中科院感光化学研究所硕士毕业生时绍平，2011年经历了10年冤狱中的超人体极限的酷刑折磨后，仍坚持信仰法轮功“真、善、忍”，于2019年11月18日在北京租住房内再遭绑架、非法抄家，现在下落不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 8:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670703.md#1" target="_blank">深圳电商平台爆雷波及三千人 涉案金额1.8亿</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_9303-150x120.jpg" align ="left"></a>位于广东深圳市南山区的回亿科技有限公司近期被大批维权人士围堵，原来该公司是大陆领先的等级会员制电商平台特奢汇总部。五个月以来，目前大约有3000余名消费者在此平台购物未发货，亦不退款，涉及金额1.8亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 2:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670385.md#1" target="_blank">女访民虹桥机场如厕 警察翻墙入内实施绑架</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-33-150x120.jpg" align ="left"></a>本月初，苏州一名警察在上海虹桥机场的女厕卫生间翻墙进入另一卫生间，对正在如厕的江苏妇女吴小燕拳打脚踢后，和守在门外的同伙把她绑架回苏州。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 12:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670175.md#1" target="_blank">罔顾市民健康 香港卫生局拒公开催泪弹成分</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670175.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911020828522188-150x120.jpg" align ="left"></a>在过去五个多月的反送中运动中，警方合共发射超过一万枚催泪弹，不时在警民冲突现场直播的立场新闻记者患上“氯痤疮”，医学界指这是人体积存高浓度有毒物质二噁英的表征。催泪弹的遗害近日广受社会关注。食物及卫生局局长陈肇始昨日（20日）出席立法会会议回答议员关于催泪弹残余物的质询。她称，警方表示涉及行动部署不宜透露催泪弹的化学成分，但承认有市民在接触催泪弹后感不适。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11670001.md#1" target="_blank">不可能达成贸易协议 中美都不说破</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11670001.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/HKDJY20191121A01-150x120.jpg" align ="left"></a>“如果最终达不成协议，将对中共征收更多关税。”11月19日，美国总统川普（特朗普）再对美中贸易谈判重申美国立场。此番发言是针对近日中方通过舆论释放出有再次毁约意图时的回应。外界观察到，北京已没有意愿与美国达成贸易协议，只是利用谈判在争取时间，“以拖待变”，等待川普弹劾案的变数；以及放出购买农产品的贸易诱饵，延迟、阻止《香港人权与民主法案》的通过。现在这两个计.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 7:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669629.md#1" target="_blank">美副国务卿提名人批评中共拘禁维吾尔人</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1074487818-150x120.jpg" align ="left"></a>被川普（特朗普）提名担任美国务院副国务卿的斯蒂芬·比根（Stephen Biegun）周三（11月20日）表示，他没有理由怀疑有关中国（中共）如何对待包括维吾尔人在内的少数民族，以及清除穆斯林的报导。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669591.md#1" target="_blank">2019港区议会选举 将是竞争最激烈的一次</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/03/1203260550112208-150x120.jpg" align ="left"></a>11月24日香港将举行计划中的区议会选举，这是特区因为《逃犯条例》修订案引发已持续半年之久的香港民主运动以来首场主要选举，因此它被视为选民对特首林郑月娥政府的一次考核，也是对一直支持政府修例的建制派的一次挑战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank">港府称催泪弹成分不宜公开 被疑故意隐暪真相</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911180456501501-150x120.jpg" align ="left"></a>在周三（20日）的立法会大会上，香港食物及卫生局局长陈肇始回应议员质询时称，“没有发现催泪烟引致二噁英中毒的情况”。陈又称当局不适宜公开催泪烟成分，并强调“警方保证催泪弹安全”。但有医生指出，二噁英可在人体中潜伏一段时间才发病，呼吁政府尽快公开催泪弹成分，以保障公众健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank">中共雇凶火烧香港大纪元印刷厂 引各界谴责</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/fire-top-600x400-1-150x120.jpg" align ="left"></a>香港时间周二（11月19日）凌晨，承印香港《大纪元时报》的印刷厂遭中共雇凶纵火，导致部分印刷设备与当日报纸受损。此事件引发各界人士关注。有美国国会众议员在推特上说，大纪元因站出来支持香港抗议、反对中共而在海外受到迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 3:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank">警惕共产扩张 爱德华兹：香港抗争警示全球</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/Screen-Shot-2018-11-21-at-7.52.44-PM-150x120.png" align ="left"></a>美国共产主义受难者基金会主席李?爱德华兹（Lee Edwards）呼吁全球应警惕共产主义的扩张，他表示香港民众抗争中共暴力也是在向世界发出“警示”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:41 AM							</td></tr>
@@ -20,16 +27,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-455106204-1-150x120.jpg" align ="left"></a>澳洲自由党参议员埃里克·阿贝茨（Eric Abetz）近日谴责中共强摘器官的“野蛮”行为，这是澳大利亚政治家对北京进行的最新一次的口头抨击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11667200.md#1" target="_blank">围困理大 中共军警全程策划“港版六四”</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11667200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183212693-150x120.jpg" align ="left"></a>18日晚，理大面临“港版六四”危机时刻，亲共建制派元老曾钰成现身理大校园，凌晨1时左右，数十名18岁以下学生获准首先随曾钰成等人离开理大。之后，陆续有留守人士离开，但更多人被当场拘捕。社交平台有视频流出，操普通话男子使用手机专用的望远镜摄录18日深夜，被困理大的学生从天桥游绳而下的出逃场面，显示一切都在中共掌控中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 6:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666940.md#1" target="_blank">组图：遭围困第三天 理工大学现场直击</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911191040312188-150x120.jpg" align ="left"></a>11月19日是香港理工大学被警方围困的第三天，救援人员进入理大，晚10时后，陆续有救援人员陪同抗争者离开，从正门离开理工大学校园，防暴警为他们登记个人资料。也有很多人受伤，需要上担架床，救援人员试图带他们离开理大，但很多人被警察拘捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666698.md#1" target="_blank">理大出口都被警封死 家长召开记者会紧急呼吁</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d89e15eba2421c_ttl7day7xe_Screen_Shot_2019-11-19_at_11.21.22_PM-150x120.png" align ="left"></a>2019年11月19日是香港理工大学被警方围困的第三天，所有通向理大的大小通路全部由防暴警察把守，理大所在的尖东站关闭。部分被困学生的家长召开记者会，呼吁让孩子安全地离开，法律问题交给法庭处理，并对港府定性他们的孩子为暴徒不满。有家长直指林郑和警察才是暴徒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 3:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666821.md#1" target="_blank">英媒：香港在燃烧 港府和北京继续火上浇油</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-18_18-11-01-150x120.jpg" align ="left"></a>香港局势近日来不断升级，欧美国家呼吁降温暴力。英国《卫报》11月18日发表社论指出，暴力是否会降级实际上取决于香港当局和中央政府，镇压只会加剧这场危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666727.md#1" target="_blank">11.19撑理大：千余人被捕 百余人被困校内</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-18_18-14-02-150x120.jpg" align ="left"></a>香港理工大学与警方之间的冲突与对峙已持续三天，截至周二（11月19日），有1100多人被捕，仍有100名抗议者困在被警察团团包围的校园内无法离开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666679.md#1" target="_blank">香港往来内地列车临时停运 运送抗议者？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666679.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Untitled-11-150x120.jpg" align ="left"></a>香港局势动荡，突然传出今明两日部分香港往来内地列车临时停运的消息。有民众担忧有香港的被捕者将被运往大陆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 1:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666702.md#1" target="_blank">香港理工大14名抗争者经下水道成功逃出</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911190804241528-600x400-1-150x120.jpg" align ="left"></a>港警重兵围堵理工大学接连三日，断水断粮，被困人士千方百计寻找逃生路线。继之前一批示威者冒险从高处垂降获志愿电单车手救出后。再有14人冒险通过下水道成功逃脱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 1:09 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666513.md#1" target="_blank">香港人权法案好事多磨 参院周二全院投票</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666513.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190925151725100699-600x400-1-150x120.jpg" align ="left"></a>《香港人权与民主法案》周一（11月18日）未传出新进展，有国会共和党参议员证实，有一两位另一党派的参议员对法案提出质疑、叫停“热线”程序，接下来法案将安排全院投票，具体时间不详。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 12:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11665650.md#1" target="_blank">澳新州议会论坛 关注中共活摘器官罪行</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11665650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1300540-150x120.jpg" align ="left"></a>11月18日，澳大利亚新州议会内举行了一场专家论坛，来自多个行业及组织的专家就医学伦理、法律及商业和人权等方面对在中国发生的活摘器官罪恶进行了讨论。很多听众在讨论会后表示，应该让更多的澳洲人知道发生了什么，澳洲应该立法，并制止中共的罪行。
-
-专家论坛由澳洲人权律师协会事务与人权小组委员会的联合主席、国际人权律师布里奇特（Madeleine Bridget.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11664532.md#1" target="_blank">广东省公安厅长李春生被民众举报到海外</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11664532.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-160-800x450-1-150x120.jpg" align ="left"></a>近期，大陆民众响应海外明慧网有关收集迫害者名单的《通告》，将广东省公安厅厅长李春生的恶行举报到海外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/21/n11670220.md#1" target="_blank">郑文杰：拘留期间遭虐待及殴打</a><br></h3>2019年8月被指涉嫌嫖娼，遭中共当局行政拘留15天的英国驻香港总领馆前香港雇员郑文杰，20日下午在个人社交网站发文，透露他当时在西九龙高铁站过境时遭截停及送往深圳，扣留期间一度被锁上手铐、蒙眼并遭殴打虐待，之后被逼签署认罪同意书。他成为“反送中”运动以来，首位公开遭遣返大陆秘密受审港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11668954.md#1" target="_blank">香港人权法火速通过 台立委：美国高度关切</a><br></h3>美国参议院于美东时间19日全院无异议通过《香港人权与民主法案》，同时也禁止美国产催泪弹等武器销往香港。民进党立委王定宇表示，香港警察的执法已经超过合理范围，这种暴力镇压方式，让全球民主国家都看不下去，也让美国参议院加速立法进程，而法案处理的速度，也代表美国对香港的关切程度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 11:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid278_8.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid278_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_8.htm">http://www.epochtimes.com/gb/ncid278_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
