--- a/gb/ncid279_9.md
+++ b/gb/ncid279_9.md
@@ -29,7 +29,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/2/n10826832.md#1" target="_blank">广东顺德村官私卖土地 上千村民静坐抗议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/2/n10826832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/mmexport1541156067317-150x120.jpg" align ="left"></a>广东佛山市顺德区北滘镇三洪奇村，因各级官员相互勾结，私自买卖土地并在村里进行施工，引发网民不满。11月1日凌晨，大量警察分几批闯入正在熟睡的村民家中，抓捕了数十名村民，从而爆发上千村民参与的大规模抗议活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年11月03日 2:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/2/n10826961.md#1" target="_blank">江西上千村民抗议建垃圾焚烧厂 遭暴力镇压</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/2/n10826961.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1-16-150x120.jpg" align ="left"></a>连续多日，江西九江市柴桑区赤湖工业园上千名村民抗议建垃圾焚烧发电厂，大批特警到现场镇压，打伤抓走村民多人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年11月03日 3:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/1/n10824270.md#1" target="_blank">上海“进博会” 维权人士个个关手机躲抓捕</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/1/n10824270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/S__8437811-150x120.jpg" align ="left"></a>首届中国国际进口博览会将于11月5日至10日在上海举行，上海维权人士、访民几乎都被警告不得去会场和周边地区，否则将严惩不贷。今日，仍有十余名访民不畏强权，前往会场附近“快闪”，结果引来警察的追捕。目前，他们都在外面躲藏，手机也呈现关机状态。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年11月02日 3:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/24/n10806485.md#1" target="_blank">粤万民上街大游行 抗议建高危废物处理中心</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/24/n10806485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/1-88-150x120.jpg" align ="left"></a>10月23日、24日，广东佛山市顺德区杏坛镇上万民众大游行，抗议在麦村建高危物品垃圾处理中心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年10月25日 3:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/3/n10888229.md#1" target="_blank">11名中国工人在日本被捕 另有46人失踪</a><br></h3>日本媒体报导，北海道地区11名中国建筑工人被捕后，另外46名中国建筑工人集体失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年12月03日 6:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/11/7/n10836648.md#1" target="_blank">湖南尘肺工人深圳维权 遭武警殴打扔烟雾弹</a><br></h3>连日来在深圳维权的数百名尘肺工友，期望能与深圳市政府谈判，解决工伤工亡赔偿问题。却在市政府门前遭到武警暴力殴打，被喷辣椒水和扔烟雾弹。多名工人受伤入院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年11月08日 3:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid279_9.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid279_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid279_9.htm">http://www.epochtimes.com/gb/ncid279_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
