--- a/gb/ncid282_10.md
+++ b/gb/ncid282_10.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614698.md#1" target="_blank">39人惨死案 英媒：另60人失踪 疑涉人蛇集团</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177747945-150x120.jpg" align ="left"></a>英国冷冻货柜车39人惨死案，警方已经拘捕了4名涉案疑犯，死者可能至少6名越南人。英国《每日邮报》报导，这次惨案的幕后主脑，可能是来自中国福建、有“偷渡皇后”之称的“萍姐”所创办的人口贩卖集团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613865.md#1" target="_blank">英货车39人命案 车厢内留有很多血手印</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613865.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177742204-600x400-2-150x120.jpg" align ="left"></a>英国卡车货柜藏39尸命案持续引发全球关注。原断定死者全是中国人，现传出可能有若干名越南人。英媒披露，货柜内的门和墙面留有很多“血手印”，死者在生前的绝望时刻可能力求想逃生，但未能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 6:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612168.md#1" target="_blank">韩国放弃发展中国家地位 学者：美剑指中共</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/11d4cafe6a4c550f4109149c5d1b36c9-150x120.jpg" align ="left"></a>美国总统川普在日前点名多个国家，利用WTO开发中国家地位，以高关税保护国内市场，韩国也在川普的名单里。据韩国媒体报导，韩国贸易官员本周与美国官员讨论，韩国决定放弃WTO开发中国家地位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612438.md#1" target="_blank">英国集装箱惨案 中英两国态度反差大 惹议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177747868-150x120.jpg" align ="left"></a>英国集装箱惨案震惊国际社会和整个英国，全球关注，而在中共官媒则一片静悄悄，中共官方25日回应表示，有关遇难者的国籍身份“尚待确认”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 1:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612465.md#1" target="_blank">大陆儿童药企仅10余家 90%药品无儿童版</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG11501513019-150x120.jpg" align ="left"></a>长久以来，大陆儿童专用药一直缺乏。6,000多家制药企业中，专门从事儿童药生产的，仅十余家，占比不足1%； 90%药品没有儿童的专用剂型。新《药品管理法》将于12月1日施行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 12:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11610544.md#1" target="_blank">维州签一带一路 分析：打开澳洲安全后门</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11610544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-467683830-150x120.jpg" align ="left"></a>本周，澳大利亚维州州长安德鲁斯（Daniel Andrews）再次访华，与他口中的“好朋友”进行深度合作。10月23日，安德鲁斯与中共发改委副主任宁吉哲签署了共同推进“一带一路”建设的框架协议，二人还出席了签署莫纳什大学与中国商用飞机有限责任公司建立研发中心协议的仪式。
@@ -20,16 +23,13 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607886.md#1" target="_blank">华为副董事长：鸿蒙系统是官媒炒作出来的</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607886.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/20180823-Chi-Jin-Huawei_GettyImages-150x120.jpg" align ="left"></a>美国将华为列入“黑名单”后，中共官媒曾高调热捧华为鸿蒙操作系统。但华为副董事长、轮值董事长徐直军日前公开表示，“鸿蒙系统”是媒体炒作，原来只是注册放着没用的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607746.md#1" target="_blank">美众院弹劾僵局 30共和党议员闯入听证会</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607746.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1182919813-150x120.jpg" align ="left"></a>周三（10月23日），美国会众议员马特·盖茨（Matt Gaetz）率领众议院共和党人冲进了有关川普（特朗普）总统弹劾调查的闭门会议，促使情报委员会主席谢安达（Adam Schiff）宣布暂停会议日程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607895.md#1" target="_blank">北京每100对新人领证 就有57对夫妻离婚</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607895.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-161683666-150x120.jpg" align ="left"></a>10月22日，中共北京市民政局公布《2019年社会服务统计季报表（三季度）》，报表显示，前三季度，北京结婚登记98,944对，同比减少6.98%，离婚登记56,720对，同比增长12.44%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 4:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607416.md#1" target="_blank">川普：土耳其在叙利亚永久停火 美解除制裁</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607416.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177744462-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（10月23日）上午约11点40分，宣布解除对土耳其的制裁，并谈到美军永久驻守叙利亚未必正确，他对撤军决定充满信心。土耳其稍早在与俄罗斯达成协议后，宣布结束对叙利亚的入侵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 2:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607221.md#1" target="_blank">防中共灭顶式渗透 郭文贵：美国应四管齐下</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607221.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/b6bafc0733182107b970020f8791381c-150x120.jpg" align ="left"></a>美国的川普政府正在积极处理中共问题，包括对欧美社会的侵略，以及对香港人、新疆人民与法轮功学员等民众的残害等，中国反共富豪郭文贵在直播中指出，美国政府必须4管齐下，包括美国与中国经济脱钩、保护台湾与香港，以及要求中共开放防火墙等方式，进一步遏止中共对美国灭顶式的侵略。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 1:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11606156.md#1" target="_blank">微商乱象 人气减肥胶囊中含禁药</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11606156.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-478009091-150x120.jpg" align ="left"></a>大陆微商朋友圈中流传的古方减肥药“燃脂减肥胶囊”，被认定为假药，且含有对人体有毒有害的禁药———西布曲明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 4:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11606079.md#1" target="_blank">涉走私船只被捕 美华裔海军上尉多次撒谎</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11606079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/180301-N-CL765-013-150x120.jpg" align ="left"></a>一名持有海军最高安全机密许可的华裔美国海军上尉及妻子于10月17日涉嫌向中国走私船只被捕。相关文件显示，这名海军上尉在接受政府背景调查时多次撒谎，他也多次向海军指挥官撒谎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 12:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11605495.md#1" target="_blank">清华教授遇车祸 5处粉碎性骨折 不治而愈</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11605495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/2019-5-8-wang-jiu-chun_01-150x120.jpg" align ="left"></a>“我倒下，脑袋撞到地上。此时车不但未停，还继续从我右腿上轧过来。我听见我的脚和腿的骨头‘咔，咔，咔，咔’被车轮压碎的响声……”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 10:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11605693.md#1" target="_blank">被标签为黄晓明老婆 Angelababy罕见吐心声</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11605693.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/DSC_0287-1-150x120.jpg" align ="left"></a>以模特身份在香港出道的Angelababy（杨颖），2015年与大陆男星在上海举行婚礼时场面盛大，备受关注。俨然公主与王子般的两人，因一年来鲜少公开互动被屡传婚变。而对于总被标签为“黄晓明老婆”，Angelababy近日在阿雅主持的综艺节目《奇遇人生》中，罕见吐露心声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 7:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11603833.md#1" target="_blank">中共推社会信用制度 逼外企做价值抉择</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/22/n11603833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/fad45e73d3ef5f99717549587310f7e0-150x120.jpg" align ="left"></a>针对中国欧盟商会提出警告，中国2020年实施社会信用制度，将掌握、决定在中国外企的生死，台湾战略模拟学会研究员何澄辉说，社会信用评等不单只是新制度，已变成一种抉择，是要选择中共的价值，还是已运行数百年的自由民主价值。商会认为如果社会信用评等不会提高交易成本，就要想办法适应，但这不仅是交易成本，更是存立己足的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 3:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614935.md#1" target="_blank">父母不帮忙带孩子 郑州男子欲跳楼轻生</a><br></h3>10月26日，河南郑州一名男子站在楼顶边缘欲跳楼轻生。据介绍，男子是因父母不帮他带孩子，于是跑到楼顶大喊不想活。僵持6小时后，男子的父亲被联系上，男子最终被救下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 1:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614863.md#1" target="_blank">海南女孩约见男网友后失联 次日被发现溺亡</a><br></h3>10月17日，海南14岁女孩小会与男网友见面，遭到对方性侵后有轻生念头。次日，小会的尸体在海边被发现，且头部、脖子等处有淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 12:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614866.md#1" target="_blank">每日三退声明精选（2019/10/26）</a><br></h3>我今天郑重宣布退出少先队和共青团。这都要归功于我今年去海外留学，看到了真正的新闻，真正的历史。我决定切断和中共这个充满谎言的人权杀手的联系！希望民主早日光复中国大陆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613705.md#1" target="_blank">中共搞“蓝天保卫战” 禁烧散煤惹民怨</a><br></h3>冬天临近，大陆各地空气质量下降，当局进行了所谓的“蓝天保卫战”，禁止村民使用散煤，以及煤改气等政策出台，但是实施过程中不顾民生，劳民伤财，民怨载道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 7:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613254.md#1" target="_blank">每日三退声明精选（2019/10/25）</a><br></h3>就允许我化名李海鸥吧。我以前真的被中共骗得很惨。我真的很谢谢大纪元，因为后来翻墙看到的很多民运人士和主张独立的人士很多不讲灭共，也不肯讲反共，甚至还替中共，只有你们大纪元真正把中共和全球左翼的思潮的联系讲清楚了。谢谢你们让我看到中共的邪恶。大彻大悟的我今天在这里下定决心，彻底退出中共党团队，并且支持你们反共的行动。中共和共产邪说正如你们所说，是我们这个时代的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 10:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612111.md#1" target="_blank">英上议院口头通过动议 吁给港人第二国籍</a><br></h3>鉴于香港近期政治局势不稳，英国上议院议员奥尔顿（Lord Alton of Liverpool）提案，呼吁给予香港人第二国籍。英国上议院24日对这项无约束力动议进行讨论，经2个半小时的辩论后，该动议获得上议院口头通过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 1:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11608288.md#1" target="_blank">徐州殡仪馆废址建露天大佛？ 官方各说各话</a><br></h3>近期，江苏省徐州市铜山区殡仪馆废址将建99米露天大佛一事在网络披露后，引起关注。中共徐州市铜山区民族宗教事务（简称“民宗局”）局相关人士承认有此事，而后，该民宗局官方则否认。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 12:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11608376.md#1" target="_blank">每日三退声明精选（2019/10/23）</a><br></h3>声明退出曾加入过的少先队组织。来美国五年了，在这里看到了真相，明白了大陆的宣传都是假的。自己有朋友修炼法轮功，2003年被非法关押在劳教所，去看望她时，看到她被戴上手铐和脚镣，这样对待她，想起她自己就想流泪。共产党太残忍了，迫害好人。自己也是受共产党迫害，因为不听共产党那一套，被免除公职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 11:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11607259.md#1" target="_blank">土耳其政府推亲共政策 引发公民不服从运动</a><br></h3>中国维吾尔族遭受中共迫害，常会选择流亡到土耳其，不过近年土耳其政府亲共立场明显。有外媒披露，土耳其现正积极将该国首都伊斯坦堡“中国化”，引发受迫害维吾尔难民的不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/23/n11606126.md#1" target="_blank">每日三退声明精选（2019/10/22）</a><br></h3>名字为化名，本人从小受到了党匪的宣传，认为入党是件“特别的光荣”。18岁去当兵入伍，军事成绩优秀，被发展为中共党员。退伍后，工作多年，发现这个共产党全是谎言。本人工作的内容也用党的宣传有关系，宣传的都是党的“丰功伟绩”，不坏的一律不许发表。近一年来，通过翻墙，看到了很多共产党的真相，也了解了一些法轮功的真相。对当初加入共产党特别特别的后悔，发自内心的要求退党.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_10.htm">http://www.epochtimes.com/gb/ncid282_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
