--- a/gb/ncid282_8.md
+++ b/gb/ncid282_8.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632781.md#1" target="_blank">美专家：跟中共打交道勿跟钱走 要跟捷克走</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Prague_6365119737-150x120.jpg" align ="left"></a>捷克共和国首都布拉格市因拒绝接受与北京以“反对台湾”为附加条件的姊妹城市关系而受到中共报复。中共在不断利用经济和文化等作为恐吓手段，要胁国际社会接受其意识形态和行为标准。有关专家呼吁人们要都像布拉格那样勇敢地站出来，向中共说“不”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 1:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632746.md#1" target="_blank">中共官员欲访逾十台校 台基进：统战入侵校园</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632746.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/26b1f265ccf19469c7babecbf78d6cc0-150x120.jpg" align ="left"></a>台湾基进党4日爆料，“中国北京丰台区教育委员会”办公室主任陈景泉5日将率团抵达台湾，进行为期3天的教育参访行程，预计走访高雄十多间学校。台湾基进高雄党部主委李欣翰表示，这个丰台区教委会所负责不仅只有课堂教学，工作项目还包括教育系统的统战工作，警告统战交流团已“全面入侵校园。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632717.md#1" target="_blank">中共推26条 台府：就是一国两制台湾方案</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632717.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/63139d7e1fe8bb6db18f2225d95b3fc3-150x120.jpg" align ="left"></a>中共国台办4日推出最新对台“26条措施”，内容横跨允许台湾企业参与5G、民航和金融组织等行业，并强调提供与中国民众有同等待遇。对此，总统府发言人丁允恭表示，这“26条措施”，其实是“一国两制台湾方案”的行动方案，中共意图以此框架台湾，也损害台湾人民实质利益。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 10:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11631454.md#1" target="_blank">电商平台借双11推特价房 深圳房1折起拍</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11631454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1411080052482663-600x400-1-150x120.jpg" align ="left"></a>临近一年一度的“双11网购节”（11月11日），大陆电商平台已开始双11的促销活动。令人大跌眼镜的是，近日大陆三大电商平台纷纷在网上卖楼，其中更有不少“笋盘”，有深圳的房源起拍价只有市场评估价的10%。
+
+深圳新闻网报导，从阿里拍卖获悉，“双11”前，全国首批上万套特价房上线，深圳地区约有143套特价房可供抢拍。此次上线的房源分布在南山、龙岗、大鹏新区、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 2:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11630930.md#1" target="_blank">华为员工曝内部诸多黑幕和腐败</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11630930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1103010952451164-150x120.jpg" align ="left"></a>华为公司研发员工月加班160小时，还要被指责工作“打酱油”，一名为胡玲的举报人上报公司内部诸多腐败问题，竟被领导逼迫欲离职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 4:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11630016.md#1" target="_blank">以活猪做致命撞击测试 中共科学家遭抗议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11630016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_PB8QH-150x120.jpg" align ="left"></a>中共科学家以活的猪只进行车辆撞击测试，以研究撞击如何对人类造成伤害。这种测试导致活猪身受重伤甚至当场死亡，有动物保护组织对此表达抗议之意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 2:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629546.md#1" target="_blank">深圳智能公厕引争议 扫码收费还限时</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111256655889-150x120.jpg" align ="left"></a>深圳罗湖区淘金山绿道，因设置了需经用手机扫码支付才能如厕的智能公厕惹来争议。有市民反映，收费的过程会耽误时间，带来不便，还有游客质疑收取2元费用的合理性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 7:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629401.md#1" target="_blank">大陆医美业：一针维C包装成美容针卖23万</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629401.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11455753694-150x120.jpg" align ="left"></a>近年来，大陆医美行业乱象不断，“天价黑”早已屡见不鲜。11月1日，网上一则新闻上了热搜，一针维C包装成美容针卖23万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629361.md#1" target="_blank">北京鼓励二胎 上班族女性陷困境</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1006452698-600x400-150x120.jpg" align ="left"></a>外媒报导说，中共一方面把生孩子上升到“国家大事”，另一方面却对产妇或孕妇的劳工待遇置若罔闻，空洞的法律根本起不到应有的作用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 5:16 AM							</td></tr>
@@ -12,22 +20,16 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11627469.md#1" target="_blank">组图：大陆网民晒猪肉炫富 让人捧腹</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11627469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/zhu2-150x120.jpg" align ="left"></a>猪肉价格一路疯涨，甚至成了奢饰品，大陆市民和网友们制作了一系列调侃猪肉价格高涨的图片和视频，让人捧腹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 10:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11627120.md#1" target="_blank">深圳三季度消费者投诉逾7万宗 过半涉腾讯</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11627120.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/00e9a654cfad92f4ec8bbfed558fc046-150x120.jpg" align ="left"></a>大陆的互联网巨头腾讯再曝丑闻，第三季度，仅在深圳一地就有逾3.8宗有关腾讯的消费者投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 9:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11626421.md#1" target="_blank">四川宠物咖啡馆将小狗染成熊猫 网民炮轰</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11626421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1177715011-150x120.jpg" align ="left"></a>四川成都一家宠物咖啡馆将小狗染成熊猫，供顾客拍照取乐，而且声称可以提供这样的染色服务。此举引来网民的大加挞伐，有人称之为哗众取宠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 1:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625725.md#1" target="_blank">不是亲生胜似亲生 对继女视如己出的明星们</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625725.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/zhang-yiyi-lin-qingxi-a-xu-ruoxuan-150x120.jpg" align ="left"></a>人们常说，继父母难当：管教过严，会使本就严峻的亲子关系雪上加霜；管教过松，人们会说你对继子女不负责任。不少艺人身为继父继母，但对其继子女视如己出，含辛茹苦地养育孩子成人，感情绝不受血缘关系拘囿，受到交口称赞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 7:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625729.md#1" target="_blank">24岁女大学生体重43斤 为省钱辣椒拌饭</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Untitled2-150x120.jpg" align ="left"></a>贵州24岁的女大学生吴花燕，父母早逝，与患病弟弟相依为命。为照顾弟弟，她几乎每天仅花2元买饭，曾有5年多时间，糟辣椒就是她唯一的下饭菜。如今的她身高只有1.35米，体重仅43斤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 5:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625245.md#1" target="_blank">云南女孩遭虐后跳楼致残 警方不立案引哗然</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625245.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Unknown-15-150x120.jpg" align ="left"></a>日前，云南曲靖20岁女孩小寒从一家宾馆4楼跳下，全身21处骨折，大小便失禁。事发前小寒遭两名男子拖拽上楼并殴打辱骂。 但警方认定该案不符合立案条件，舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 1:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11623448.md#1" target="_blank">加拿大魁省移民明年起实施“价值观”测试</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11623448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1497237989-150x120.jpg" align ="left"></a>移民加拿大、计划到魁北克省定居的人士，将很快需要参加该省推行的价值观测试。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 11:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624399.md#1" target="_blank">两中国人涉嫌在澳洗钱 逾1700万资产遭冻结</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624399.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-456355880-150x120.jpg" align ="left"></a>澳洲联邦警察（AFP）正在调查涉嫌洗钱的两名中国人，查获了价值1730万澳元的资产，其中包括6处位于墨尔本的房地产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 11:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624622.md#1" target="_blank">日本世界遗产陷火海 首里城三大殿全烧毁</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1179077471-150x120.jpg" align ="left"></a>10月31日凌晨，被列为世界遗产的日本冲绳（琉球）岛那霸市的首里城发生火灾，首里城内的三大殿被全部烧毁，起火原因尚待调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623479.md#1" target="_blank">刷脸买菜时代到来？加国安全专家：风险大</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-841450950-150x120.jpg" align ="left"></a>一家位于多伦多的华人超市连锁店表示，计划明年初至少在一家商店中部署加拿大首个脸部识别付款系统。也就是说，只要扫描一下脸，就可以付钱买东西了。不过，有专家认为，这风险很大。有安全专家认为，为了方便而使用生物识别数据，可能带来隐私风险，因为这些数据属于高度敏感的个人信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 7:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623218.md#1" target="_blank">多伦多中国留学生范博乔误杀罪成 下周判刑期</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-2-150x120.jpg" align ="left"></a>22岁的中国留学生范博乔（Boqiao Fan，音译）因在两年前涉嫌殴打另一中国留学生致死，于10月30日被判误杀罪名成立。死者家人称，罪名太轻，判决不公平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623391.md#1" target="_blank">事故频传玻璃桥纷停运 仅河北就关32座</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623391.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-592276790-150x120.jpg" align ="left"></a>近年来，玻璃桥项目在大陆各地不少景区景点推出，迄今事故频传，夺走至少2人性命。最近不少玻璃桥景区被叫停了，光在河北一省， 32座玻璃桥类项目已全部停运。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623141.md#1" target="_blank">因通胀指标低于2% 美联储年内第三次降息</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1179064671-150x120.jpg" align ="left"></a>美联储周三（10月30日）公布联邦公开市场委员会（FOMC）的最新议息会议结果，决定再次降低美国联邦储备金率25个基点，这是2019年以来的第三次降息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 2:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11622837.md#1" target="_blank">监控无处不在 重庆首推居民供水卡实名制</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11622837.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/tap-791172_1920-150x120.jpg" align ="left"></a>中国各个领域正在进一步推行实名制。重庆自来水公司本月向社区居民发出通知，促请居民持个人身份证办理水卡。该公司职员证实，全市居民须实名制办理水卡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 1:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632684.md#1" target="_blank">台政院资安处长：台每月遭境外网攻三千万次</a><br></h3>美台首度于11月4日举办“大规模网路攻防演练（CODE）”。行政院资通安全处处长简宏伟表示，台湾政府部门每个月平均被攻击高达3千万次，台湾是受到境外网攻最严重国家的“前段班”，“推测”一半以上来自中国大陆，但网攻多以跳板、绕道匿名匿踪，难笃定说“源头就是哪国”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 10:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11632511.md#1" target="_blank">浙江嘉兴快递员扶老人反遭诬告 引热议</a><br></h3>昨日（11月3日），多家陆媒报导，浙江嘉兴一名快递员小王近日开车送货时，看到一位老人摔倒，于是下车搀扶。没想到，老人起身后，却称是快递员把她撞倒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 8:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11631940.md#1" target="_blank">河北小学生被老师踢伤 三天后死亡</a><br></h3>近日，河北省邯郸市永年区明山学校六年级学生小航（化名）在医院死亡。据小航的阿姨介绍，小航上体育课时因没排好队被老师踢伤，三天后治疗无效身亡。家属表示，在孩子住院期间，班主任曾让家长对小航的病例造假进行骗保。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 3:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/4/n11631504.md#1" target="_blank">每日三退声明精选（2019/11/03）</a><br></h3>入队时小孩子无法自主，入团从未考虑，因为太多丑恶，入党为了养家糊口，但从未做过亏心事，一直与人为善，助人为乐，现为了家庭的将来，声明退党、退队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11630046.md#1" target="_blank">大连老太被骗 在养生会所十个月花两百万</a><br></h3>10个月内，66岁的大连市民李女士在当地一家养生会所花费了200余万元。她不仅花光了积蓄，还将女儿的存款全部花完。李女士的老伴查看消费记录，发现金额高得吓人：一次药浴11.746万、背部疏通经络3.75万............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 2:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11629919.md#1" target="_blank">河南1岁男婴被狗咬掉半边脸</a><br></h3>9月28日，河南周口商水胡吉镇，13个月大的硕硕跟着奶奶到邻居家串门，邻居的一条大狗突然冲出来扑到硕硕脸上，将他拖出半米远，咬的他浑身是血。狗主人称，他的狗从没咬过人，因此没拴狗绳，是硕硕拿东西打了它。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 1:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/3/n11629888.md#1" target="_blank">湖北女子辅导儿子功课 气出心梗险丧命</a><br></h3>11月1日，湖北襄阳36岁的王女士辅导儿子写作业时气得诱发心梗，险些丧命。当天晚上，王女士为自己的儿子讲解数学题，反复讲解多次后，儿子仍不会，过程中，王女士突感心脏不适。她表示，近一年来，她为儿子的学习生了不少气，没想到这次竟如此严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 12:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11629156.md#1" target="_blank">每日三退声明精选（2019/11/02）</a><br></h3>我是一名小食品经营者，眼下老百姓真的是太不容易了，我和老公一天只睡四个小时，从早忙到晚，也没啥积蓄，中共邪党的贪官一贪就是百万、千万的甚至上亿，老百姓咋办啊！在此，我声明退出中共邪党的少先队邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 12:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/2/n11628455.md#1" target="_blank">每日三退声明精选（2019/11/01）</a><br></h3>年少时缺乏对世界的认知，被教唆下加入了共青团。年龄增长，接触到更多事物，渐渐了解到共产党及其相关组织邪恶的真实面目。作为具备公民意识的人，应当远离作恶的组织，在此，我谨代表我自己退出中国共青团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月02日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11627202.md#1" target="_blank">美一系列挺台行动 华府学者：史无前例</a><br></h3>中共近来不断加大对台湾的政治、经济、军事等各方面的压力，不过，有美国学者认为，美国也正以“切香肠”、不挑衅的渐进方式加强与台湾的关系，甚至川普政府许多支持台湾的作为都是“史无前例”、“前所未见”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月02日 3:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/1/n11626309.md#1" target="_blank">每日三退声明精选（2019/10/31）</a><br></h3>上学时，我受蒙骗，加入了共青团和少先队。工作后，我逐渐看清了共产党欺骗成性、颠倒黑白、贪污腐败的嘴脸，深恶痛绝。我爷爷是国民党军官，1949年去了台湾，我奶奶带着我父亲等留在老家。我奶奶为了保护家人，被迫捐出了所有土地，可是我的父亲还是被剥夺了上学的机会。如今，共产党要拆除我的祖宅，在原址修建假的古宅，发展古镇经济。我们欲哭无泪，即将痛失家园，却无处伸冤。一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 11:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11621957.md#1" target="_blank">顶级乐团卷入美中冲突 伊士曼取消大陆巡演</a><br></h3>因为北京取消了伊士曼（Eastman）乐团中三名韩国学生的签证，在校友和学生的压力下，这所著名的音乐学校决定取消本周在中国的巡回演出。预定参加演出的伊士曼爱乐乐团（Eastman Philharmonia）由80多名学生组成，伊士曼音乐学院位于纽约州罗切斯特，被认为是世界上最顶尖的音乐学院之一，在国际享有很高声望。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 7:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_8.htm">http://www.epochtimes.com/gb/ncid282_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
