--- a/gb/ncid282_9.md
+++ b/gb/ncid282_9.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625725.md#1" target="_blank">不是亲生胜似亲生 对继女视如己出的明星们</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625725.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/zhang-yiyi-lin-qingxi-a-xu-ruoxuan-150x120.jpg" align ="left"></a>人们常说，继父母难当：管教过严，会使本就严峻的亲子关系雪上加霜；管教过松，人们会说你对继子女不负责任。不少艺人身为继父继母，但对其继子女视如己出，含辛茹苦地养育孩子成人，感情绝不受血缘关系拘囿，受到交口称赞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 7:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625729.md#1" target="_blank">24岁女大学生体重43斤 为省钱辣椒拌饭</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Untitled2-150x120.jpg" align ="left"></a>贵州24岁的女大学生吴花燕，父母早逝，与患病弟弟相依为命。为照顾弟弟，她几乎每天仅花2元买饭，曾有5年多时间，糟辣椒就是她唯一的下饭菜。如今的她身高只有1.35米，体重仅43斤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 5:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625245.md#1" target="_blank">云南女孩遭虐后跳楼致残 警方不立案引哗然</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11625245.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Unknown-15-150x120.jpg" align ="left"></a>日前，云南曲靖20岁女孩小寒从一家宾馆4楼跳下，全身21处骨折，大小便失禁。事发前小寒遭两名男子拖拽上楼并殴打辱骂。 但警方认定该案不符合立案条件，舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 1:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11623448.md#1" target="_blank">加拿大魁省移民明年起实施“价值观”测试</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11623448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1497237989-150x120.jpg" align ="left"></a>移民加拿大、计划到魁北克省定居的人士，将很快需要参加该省推行的价值观测试。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 11:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624399.md#1" target="_blank">两中国人涉嫌在澳洗钱 逾1700万资产遭冻结</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624399.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-456355880-150x120.jpg" align ="left"></a>澳洲联邦警察（AFP）正在调查涉嫌洗钱的两名中国人，查获了价值1730万澳元的资产，其中包括6处位于墨尔本的房地产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 11:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624622.md#1" target="_blank">日本世界遗产陷火海 首里城三大殿全烧毁</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/31/n11624622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1179077471-150x120.jpg" align ="left"></a>10月31日凌晨，被列为世界遗产的日本冲绳（琉球）岛那霸市的首里城发生火灾，首里城内的三大殿被全部烧毁，起火原因尚待调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623479.md#1" target="_blank">刷脸买菜时代到来？加国安全专家：风险大</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-841450950-150x120.jpg" align ="left"></a>一家位于多伦多的华人超市连锁店表示，计划明年初至少在一家商店中部署加拿大首个脸部识别付款系统。也就是说，只要扫描一下脸，就可以付钱买东西了。不过，有专家认为，这风险很大。有安全专家认为，为了方便而使用生物识别数据，可能带来隐私风险，因为这些数据属于高度敏感的个人信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 7:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623218.md#1" target="_blank">多伦多中国留学生范博乔误杀罪成 下周判刑期</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-2-150x120.jpg" align ="left"></a>22岁的中国留学生范博乔（Boqiao Fan，音译）因在两年前涉嫌殴打另一中国留学生致死，于10月30日被判误杀罪名成立。死者家人称，罪名太轻，判决不公平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623391.md#1" target="_blank">事故频传玻璃桥纷停运 仅河北就关32座</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623391.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-592276790-150x120.jpg" align ="left"></a>近年来，玻璃桥项目在大陆各地不少景区景点推出，迄今事故频传，夺走至少2人性命。最近不少玻璃桥景区被叫停了，光在河北一省， 32座玻璃桥类项目已全部停运。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 6:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623141.md#1" target="_blank">因通胀指标低于2% 美联储年内第三次降息</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11623141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1179064671-150x120.jpg" align ="left"></a>美联储周三（10月30日）公布联邦公开市场委员会（FOMC）的最新议息会议结果，决定再次降低美国联邦储备金率25个基点，这是2019年以来的第三次降息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 2:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11622837.md#1" target="_blank">监控无处不在 重庆首推居民供水卡实名制</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11622837.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/tap-791172_1920-150x120.jpg" align ="left"></a>中国各个领域正在进一步推行实名制。重庆自来水公司本月向社区居民发出通知，促请居民持个人身份证办理水卡。该公司职员证实，全市居民须实名制办理水卡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 1:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11620538.md#1" target="_blank">【新闻看点】以女孩凯拉为名 美斩首巴格达迪</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11620538.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/1502110106412357-150x120.jpg" align ="left"></a>伊斯兰恐怖组织头目巴格达迪被击毙。川普说“一个病态、堕落的人，如今他死了”。美国的这次行动有一代号，叫“凯拉·穆勒”。凯拉被巴格达迪作为人质而被折磨致死，美军方以她命名行动，告诉大家，“美国没有忘记”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 3:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11619836.md#1" target="_blank">涉贿选收中资 台湾“中国民进党”干部被起诉</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11619836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/59db5ecb420e08e6afffec1c41889b75-150x120.jpg" align ="left"></a>爱国同心会成员张秀叶，去(107)年以中国民进党秘书长身份参选北市中正、万华区议员，因涉贿选而遭起诉；北检循线追查金流，发现其未依法设立专户而收受的17万余元政治献金，更一并查出中国民进党主席周庆峻收受中国资金189万余元，北检29日依违反《政治献金法》起诉2人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月29日 11:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11619893.md#1" target="_blank">美歼灭IS首脑行动 为何以这女子名字命名</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11619893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1502110023212602-150x120.jpg" align ="left"></a>穆勒（Kayla Mueller）为丹麦难民理事会（Danish Refugee Council）工作，2013年在前往叙利亚北部一处医院途中被绑架，2014年底落入巴格达迪（Abu Bakr al-Baghdadi）手中，据信多次遭他性侵和虐待。2015年IS声称穆勒在空袭中被炸死，但她的尸骨迄今依然下落不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月29日 8:37 PM							</td></tr>
@@ -10,14 +21,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/28/n11618052.md#1" target="_blank">北京遭大风沙尘齐袭 近十年同期罕见</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/28/n11618052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG111256717046-150x120.jpg" align ="left"></a>10月28日，北京遭大风和沙尘齐袭，局地瞬时风力达9级以上，有路人被砸伤。受沙尘影响，北京市PM10浓度达6级重污染。此外，大范围沙尘侵袭北方，多城市出现重污染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月29日 12:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11616246.md#1" target="_blank">大陆演唱会上病倒就医 林俊杰针头用品被出售</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11616246.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1811282149341487-150x120.jpg" align ="left"></a>近期在大陆举办演唱会的歌手林俊杰（JJ），10月27日晚结束在江苏镇江场的演出之后在后台晕倒，被直接送到医院挂吊瓶。事后就有医护人员在网上售卖林俊杰使用过的针头和注水包。引发网民热议：“医护人员不应该被吊销医师执照吗？”“这社会真的是有病了。”“追星脑残们越来越恶心了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 11:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612447.md#1" target="_blank">大纪元新唐人见证“少年香港”的锻造时刻</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190919094045100615-150x120.jpg" align ="left"></a>数月以来，大纪元新唐人记者坚守反送中现场，除了采访香港官员议员、专家学者、社工、明星和年轻抗争者外，也连线多位香港评论员，进行采访报导，与此同时，大纪元新唐人为香港年轻人所受的莫须有罪名感到沉痛，却也目睹了无数香港年轻人面对暴力威胁时，拥有坚守正道的气度以及决不退缩的勇敢，令人感到此时的“少年香港”，才是神州未来的希望。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 7:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614698.md#1" target="_blank">39人惨死案 英媒：另60人失踪 疑涉人蛇集团</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177747945-150x120.jpg" align ="left"></a>英国冷冻货柜车39人惨死案，警方已经拘捕了4名涉案疑犯，死者可能至少6名越南人。英国《每日邮报》报导，这次惨案的幕后主脑，可能是来自中国福建、有“偷渡皇后”之称的“萍姐”所创办的人口贩卖集团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613865.md#1" target="_blank">英货车39人命案 车厢内留有很多血手印</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613865.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177742204-600x400-2-150x120.jpg" align ="left"></a>英国卡车货柜藏39尸命案持续引发全球关注。原断定死者全是中国人，现传出可能有若干名越南人。英媒披露，货柜内的门和墙面留有很多“血手印”，死者在生前的绝望时刻可能力求想逃生，但未能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 6:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612168.md#1" target="_blank">韩国放弃发展中国家地位 学者：美剑指中共</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/11d4cafe6a4c550f4109149c5d1b36c9-150x120.jpg" align ="left"></a>美国总统川普在日前点名多个国家，利用WTO开发中国家地位，以高关税保护国内市场，韩国也在川普的名单里。据韩国媒体报导，韩国贸易官员本周与美国官员讨论，韩国决定放弃WTO开发中国家地位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 2:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612438.md#1" target="_blank">英国集装箱惨案 中英两国态度反差大 惹议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177747868-150x120.jpg" align ="left"></a>英国集装箱惨案震惊国际社会和整个英国，全球关注，而在中共官媒则一片静悄悄，中共官方25日回应表示，有关遇难者的国籍身份“尚待确认”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 1:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612465.md#1" target="_blank">大陆儿童药企仅10余家 90%药品无儿童版</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG11501513019-150x120.jpg" align ="left"></a>长久以来，大陆儿童专用药一直缺乏。6,000多家制药企业中，专门从事儿童药生产的，仅十余家，占比不足1%； 90%药品没有儿童的专用剂型。新《药品管理法》将于12月1日施行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 12:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11610544.md#1" target="_blank">维州签一带一路 分析：打开澳洲安全后门</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/24/n11610544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-467683830-150x120.jpg" align ="left"></a>本周，澳大利亚维州州长安德鲁斯（Daniel Andrews）再次访华，与他口中的“好朋友”进行深度合作。10月23日，安德鲁斯与中共发改委副主任宁吉哲签署了共同推进“一带一路”建设的框架协议，二人还出席了签署莫纳什大学与中国商用飞机有限责任公司建立研发中心协议的仪式。
-
-在安德鲁斯宣布访华前，澳洲安全专家担忧其与中共过从甚密的关系会对澳洲产生意想不到的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 9:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11621957.md#1" target="_blank">顶级乐团卷入美中冲突 伊士曼取消大陆巡演</a><br></h3>因为北京取消了伊士曼（Eastman）乐团中三名韩国学生的签证，在校友和学生的压力下，这所著名的音乐学校决定取消本周在中国的巡回演出。预定参加演出的伊士曼爱乐乐团（Eastman Philharmonia）由80多名学生组成，伊士曼音乐学院位于纽约州罗切斯特，被认为是世界上最顶尖的音乐学院之一，在国际享有很高声望。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 7:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11621195.md#1" target="_blank">快舟一号甲火箭取消发射 中共官媒谎报成功</a><br></h3>昨日（10月29日）中国航天科工集团研制“快舟一号甲”运载火箭，突然取消当天上午在甘肃酒泉卫星发射中心的发射计划。但是中共官媒及当地媒体仍称发射任务取得圆满成功，之后才陆续删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11621413.md#1" target="_blank">每日三退声明精选（2019/10/29）</a><br></h3>共产党确实坏，它不仅破坏中国文化摧毁中华文明，不断的制造各种政治运动，使中国人苦难深重，现在又千方百计的欺诈老百姓，用老百姓的钱粉饰大好形势，对善良法轮功残酷迫害，这都是邪恶党的本性决定的，现在我申明退出党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/29/n11619500.md#1" target="_blank">内蒙古15岁女孩长期遭霸凌 校方警方推诿</a><br></h3>内蒙古呼和浩特第19中学的初三女生屡屡遭人欺凌，包括经常被勒索、被三十多人围殴、被抢走手机等等。这种欺凌行为长达一年，期间校方和警方都放任不管，令受害女生家长投诉无门，只能向媒体曝光事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月29日 6:26 PM							</td></tr>
@@ -25,11 +29,5 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/28/n11616997.md#1" target="_blank">常熄灯后玩手机 西安男子患眼中风短暂失明</a><br></h3>陕西西安一名男子经常在熄灯后玩手机，近日，其眼睛短暂失明，后被诊断为眼卒中，即眼中风。医生表示，长时间玩手机是诱因，严重可致盲，此病的发病率最近呈年轻化趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/28/n11616747.md#1" target="_blank">每日三退声明精选（2019/10/27）</a><br></h3>我声明退出贪污成风、腐化成性、欺骗愚弄百姓、破坏社会生产力、独裁傲慢、自大膨胀、践踏法律、破坏法治环境、倒行逆施、封建复辟、蔑视生命、颠倒黑白、邪恶不赦的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11615002.md#1" target="_blank">四川老师遭学生砸砖 头部被猛击9次</a><br></h3>10月24日，四川省眉山市仁寿县城北初中，一名老师遭一名男生从后背用砖猛击头部9次，致重伤被送入ICU。据悉，该学生因违反校规骑自行车被老师教育，因而对老师怀恨在心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 1:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614935.md#1" target="_blank">父母不帮忙带孩子 郑州男子欲跳楼轻生</a><br></h3>10月26日，河南郑州一名男子站在楼顶边缘欲跳楼轻生。据介绍，男子是因父母不帮他带孩子，于是跑到楼顶大喊不想活。僵持6小时后，男子的父亲被联系上，男子最终被救下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 1:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614863.md#1" target="_blank">海南女孩约见男网友后失联 次日被发现溺亡</a><br></h3>10月17日，海南14岁女孩小会与男网友见面，遭到对方性侵后有轻生念头。次日，小会的尸体在海边被发现，且头部、脖子等处有淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 12:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/27/n11614866.md#1" target="_blank">每日三退声明精选（2019/10/26）</a><br></h3>我今天郑重宣布退出少先队和共青团。这都要归功于我今年去海外留学，看到了真正的新闻，真正的历史。我决定切断和中共这个充满谎言的人权杀手的联系！希望民主早日光复中国大陆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613705.md#1" target="_blank">中共搞“蓝天保卫战” 禁烧散煤惹民怨</a><br></h3>冬天临近，大陆各地空气质量下降，当局进行了所谓的“蓝天保卫战”，禁止村民使用散煤，以及煤改气等政策出台，但是实施过程中不顾民生，劳民伤财，民怨载道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 7:51 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/26/n11613254.md#1" target="_blank">每日三退声明精选（2019/10/25）</a><br></h3>就允许我化名李海鸥吧。我以前真的被中共骗得很惨。我真的很谢谢大纪元，因为后来翻墙看到的很多民运人士和主张独立的人士很多不讲灭共，也不肯讲反共，甚至还替中共，只有你们大纪元真正把中共和全球左翼的思潮的联系讲清楚了。谢谢你们让我看到中共的邪恶。大彻大悟的我今天在这里下定决心，彻底退出中共党团队，并且支持你们反共的行动。中共和共产邪说正如你们所说，是我们这个时代的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 10:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/25/n11612111.md#1" target="_blank">英上议院口头通过动议 吁给港人第二国籍</a><br></h3>鉴于香港近期政治局势不稳，英国上议院议员奥尔顿（Lord Alton of Liverpool）提案，呼吁给予香港人第二国籍。英国上议院24日对这项无约束力动议进行讨论，经2个半小时的辩论后，该动议获得上议院口头通过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 1:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid282_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_9.htm">http://www.epochtimes.com/gb/ncid282_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
