--- a/gb/news2008_9.md
+++ b/gb/news2008_9.md
@@ -1,4 +1,25 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11667734.md#1" target="_blank">镭射笔成“开门钥匙”？居家声控的安全隐忧</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/20/n11667734.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191120_shouhuihsu_laser_GettyImages-903445008_01-150x120.jpg" align ="left"></a>这些像“看家狗”一样的人工智能设备并不安全，用一种简单常见的办法就可成功“入侵”，甚至可能导致家庭财物被盗！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11667199.md#1" target="_blank">女性懒人养生法 热敷30分钟 保养子宫排经血</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11667199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/hot-pack-woman3_174156308-150x120.jpg" align ="left"></a>看诊这些年来，笔者常常鼓励大家要热敷身体，尤其是女性朋友，更要常常热敷小腹。女性需要保养子宫：女性的骨盆腔内比男性多了一个器官，那就是子宫。女性时常热敷小腹，更可以加强子宫收缩，促进经血排放的顺利，医师在处理妇科问题时，就能更加得心应手！提供热敷方法：1. 女性每天至少30分钟热敷小腹，月经来时可以加强热敷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:26 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666899.md#1" target="_blank">十月东湾房市价格略反弹 Berkeley达新高</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1024px-UCBerkeleyCampus-150x120.jpg" align ="left"></a>文：李欧?大纪元
+旧金山东湾房市在经历前两个月的下滑后，十月份终于得到旺季的弹药补给，使得销量与价格有弹升的气力。本次我们也额外加入康斗、联排房的销售数据，让读者能更详尽地看到每个房市的变化。
+
+详细数据请见以下文章：
+2019东湾房市10月份最新数据（上）
+东湾地产：Berkeley一支独秀
+首先还是看独.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666790.md#1" target="_blank">2019东湾房市10月份最新数据（上）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910esatbay-5-150x120.jpg" align ="left"></a>10/2019东湾房市，统计销售中位数价格、库存、待售出、售出数量等多个房市数据。
+东湾房市：奥克兰（Oakland）独立房市场销售状况摘要
+· 10月份期间新上市的独立房屋共有336栋。（9月：360）
+· 10月份期间售出的独立住宅共有243栋。（9月：169）
+· 10月份的中间售价高达83万8,000美.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:32 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11650721.md#1" target="_blank">衣服“定量、定色化”的穿搭技巧</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11650721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/20190125_shouhuihsu_petter-palander_01-150x120.jpg" align ="left"></a>夫妻2人同住。原本是极繁主义者（Maximalist），但因为心里强烈渴望“轻爽自在”，于是夫妻一同减少家中物品，摇身一变为极简主义者（Minimalist）。作者在部落格记录了自己的生活样貌，唤起广大读者回响。自从采取了“定量化”制度后，发现不光是家里变得清清爽爽，家事做起来也更轻松了。并同时采取“定额化”（书只保留.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:57 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666390.md#1" target="_blank">减少食物浪费 “原味主厨”传授秘诀</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11666390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-596425928-150x120.jpg" align ="left"></a>“原味主厨”杰米·奥利佛（Jamie Oliver）大方分享节省食物的秘诀，以下是他给家庭厨师们的建议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:46 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11664005.md#1" target="_blank">9款美国地区性甜点 给家人一个温暖假期</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11664005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_1039681717-150x120.jpg" align ="left"></a>感恩节过完，马上就是圣诞新年了！在家人团聚的日子里，美味的甜点总是能为聚会画龙点睛！如果您在规划甜点时少了一些灵感，不妨参考这些历久弥新的美国区域点心，邀请全家大小，一起品尝这些承传自过去的美食记忆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11665220.md#1" target="_blank">俄罗斯白狗因黑色浓眉遭拒养 最终成为网红</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/19/n11665220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-107094069-150x120.jpg" align ="left"></a>你见过长黑眉毛的白狗吗？在俄罗斯就有这样一只白狗，因为天然的黑色浓眉而被拒绝收养，直到遇到现在的主人，才使它翻转人生，而且在网上走红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656438.md#1" target="_blank">后头痛的病因及指压缓解法</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/htt191114pt-150x120.jpg" align ="left"></a>后头痛也是常见头痛类型之一，其痛处固定在后头部，重者有剧烈疼痛，甚致痛连眉梢，轻者间有头皮麻木之蒙蒙感，从后脑(或颈部)一直延伸致头顶部为止，此外枕骨下胀闷，重胀感觉；后头痛在现代医学中常对应到紧张性头痛，虽不舒服又烦人，一般不会危害健康。但也有些造成后头痛的病理性因素，此就不可轻忽。以下分以病理性及非病理性来说明造成.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 6:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656741.md#1" target="_blank">男孩该不该割包皮？医师解析利与弊</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Circumcision-1118-150x120.jpg" align ="left"></a>许多家长问我：“医生，我的儿子长包皮了吗？他的包皮会过长吗、需要割除吗？”让我们一一解开割包皮疑惑。包皮是天生的器官，正常情况下，每个男孩阴茎上都有包皮，即包在阴茎外部的一层皮，包皮即使过长也不会影响健康。割除包皮是让龟头露出的一个小手术。从医学角度看是否需要割包皮？割包皮的好处包括降低尿道炎风险，降低阴茎癌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 3:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11662403.md#1" target="_blank">肾结石痛到一辈子忘不了 2招预防 不让结石上身</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11662403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/kidney-stone-1117-150x120.jpg" align ="left"></a>肾结石是肾脏常见疾病，特征是腰痛加血尿，痛起来一辈子不会忘记。患者一旦有肾结石，再次结石概率高，因此须从饮食上做好预防。草酸钙结石和尿酸结石是肾结石主要的2类。草酸钙结石是草酸摄取太多造成，所以平时要少吃高草酸食物，例如，菠菜、甜菜、包括花生在内的坚果类、巧克力等等。从饮食预防肾结石，有2点最关键：1. 多喝水......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11650180.md#1" target="_blank">造福全球驾驶的发明 14岁少女赢得创新赛冠军</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11650180.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/1708151316192483-150x120.jpg" align ="left"></a>一位美国14岁天才少女，解决了一个难解的汽车A柱视线死角的问题，这个可能造福全世界驾驶的发明，让她赢得“博通大师科技创新明日之星竞赛”（Broadcom MASTERS）冠军，并获得25000美元奖金（约新台币76万元）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663607.md#1" target="_blank">【美食天堂】广式脆皮烧鸭 感恩节快乐！</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663607.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d83ff70f39a5dd_ttl7dayCNJ_Cantonese_Roasted_Duck_Pic1-150x120.jpeg" align ="left"></a>广式烧鸭是一道传统粤菜。成菜色泽金红，滋味醇厚，入口即离，具有皮脆、肉嫩、骨香、肥而不腻的特点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663808.md#1" target="_blank">“台湾真美！”一位外籍留学生眼中的台湾</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/18/n11663808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191118-Joway-trip-01-02-150x120.jpg" align ="left"></a>生活在台湾，每一道让人印象深刻的美丽风景，都有其独特的韵味，忍不住想要告诉全世界“台湾真的好美！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:10 PM			</td></tr>
@@ -24,22 +45,5 @@ i3的大灯使用了LED光源，并且整合了LED日行灯。水箱护照的饰盖.........<br><img alig
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11658950.md#1" target="_blank">关节反复肿胀疼痛 当心罕见肿瘤“腱鞘巨细胞瘤”</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11658950.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Tenosynovial-Giant-Cell-Tumor-TGCT-_708408886-150x120.jpg" align ="left"></a>腱鞘巨细胞瘤（TGCT），又称色素沉着绒毛结节性滑膜炎（PVNS），是一种少见的长在骨头软组织的肿瘤。极少数会变成癌症，通常是良性，但却对骨头破坏很大。腱鞘巨细胞瘤症状：膝盖反复肿胀，常被误解为关节炎。腱鞘巨细胞瘤分单颗型与弥漫型。多长在膝盖处，症状是膝盖肿胀、疼痛、僵硬无力。腱鞘巨细胞瘤治疗方法以手术为主。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 6:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657185.md#1" target="_blank">“寒冬圣品”生姜 能缓解关节肌肉酸痛</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657185.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ginger-1115-150x120.jpg" align ="left"></a>生姜具有暖胃止呕的作用，在中药有“呕家圣药”的美誉，美国卫生研究院也将生姜列为营养补充品，认可有助缓解晕车、化疗与怀孕呕吐的作用，冬天喝碗姜汤可以驱寒暖身，是家家户户必备的寒冬圣品。联新国际医院运动医学科主治医师周佳仪表示，姜的好处不只如此，也是帮助运动后肌肉修复、缓解关节疼痛的圣品，而且取得容易、价格平易近人，民众可.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11656909.md#1" target="_blank">医生也爱的“高丽菜减肥法”3个月瘦20公斤</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11656909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cabbage_345222329-150x120.jpg" align ="left"></a>一些方法让减肥不再是苦差事，可以吃到饱又能健康瘦下来。近年来流行的“高丽菜减肥法”就是其中之一。日本医学博士、寺师医院院长寺师义典就通过这方法，成功在3个月里减重20公斤。用高丽菜减肥的方法是，每日三餐前先吃1/6颗高丽菜，并花时间仔细咀嚼。如此一来除了可尝到蔬菜的清甜，还能产生饱足感，从而少吃其它高热量食物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657233.md#1" target="_blank">七种最具职场优势的语言 中文再度夺冠  ?</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/Fotolia_48204730_Subscription_L-150x120.jpg" align ="left"></a>众所皆知语言的优势不仅为自己提升竞争力，让自己迅速获得上司的重视与赏识，在面对许多重要的工作场合时，更能迎刃有余的面对处理。而最有优势的语言也常随着时局的变化而有所不同。以往英语一直是立于不败之地的最佳第二学习语言，但随着全球贸易的普及，许多其他语言的重要性已大幅增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657333.md#1" target="_blank">周末和家人做好周间饮食规划 下厨变轻松了</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657333.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_84159750_Subscription_L-150x120.jpg" align ="left"></a>停止追求精美的摆盘、繁琐的工序，让饮食回到食物的根本吧！就从这个周末开始，我们让做菜、下厨成为全家人的活动，家人们一起来思考下周的饮食计划，借机让孩子跟土地与食物，有更多连结与接触。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657345.md#1" target="_blank">美国男子偷吃别人的冰淇淋 被电视直播逮到</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657345.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1181721173-150x120.jpg" align ="left"></a>美国一名男子日前在冰上曲棍球的球场外偷拿别人的冰淇淋，然后往自己的嘴巴塞。这整个“行窃”过程被正在转播的电视镜头逮个正着，而且传送到数以百万计的观众眼前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:14 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657583.md#1" target="_blank">应该多久洗一次车？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/608290245051501-150x120.jpg" align ="left"></a>对于很多人来说，汽车是一项大投资，你需要花费金钱来维护它：换油、轮换轮胎、换刹车片。但是，你是否曾经考虑过把洗车也作为日常维护的一部分呢？需要多久洗一次？洗车很重要吗？
-
-有时你的车看上去很明显需要洗一下，例如，经过一整天的尘土飞扬的碎石路。或者，当你将车停在你认为是理想的遮荫树下时，有一群小鸟看上了你的汽车引擎盖.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656422.md#1" target="_blank">癫痫发作 千万别做2件事！医师教正确处理方法</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656422.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Epilepsy-seizure_1462840373-150x120.jpg" align ="left"></a>提到癫痫，很多人会联想到突然抽搐倒地、口吐白沫的场景，这是癫痫发作的典型症状。癫痫者症状发作时，往往让旁人手足无措，应该如何正确处理？哪些癫痫症状容易被忽略？癫痫是脑部出现疾病或病变，造成脑细胞突发、异常的放电活动，导致行为、意识、认知出现异常。癫痫发作时若能正确应对，可保护患者不受伤害，千万不能做的两件事：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 8:23 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656203.md#1" target="_blank">大温哥华10月房屋销售暴增45%</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656203.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/fwxs191114-150x120.jpg" align ="left"></a>根据卑诗省房地产协会（BCREA）公布的数据，10月份大温房屋销售同比增长45％，卑省房地产整体复苏，房屋数量、价格和销量都有所增长。全省的数字表明大部分市场正在恢复“更为典型的销售活动水平”；各省住宅房地产销售的复苏也推动了卑诗省房价的上涨。多重挂牌服务（MLS）数据显示，全省10月份房屋销售同比增长19.3％，其中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 8:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11649409.md#1" target="_blank">研究：人工受孕附加治疗并无科学依据</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11649409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Baby-Feet-Massage-Points-3-150x120.jpg" align ="left"></a>目前没有明确的证据表明，昂贵的附加治疗会提高女性通过体外受精（IVF）怀孕的概率。包括莫纳什大学研究人员在内的一组国际生育专家认为，其中的一些疗法甚至可能降低受孕的可能性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 4:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11653702.md#1" target="_blank">中医论病：偏头痛发病机理及治疗</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/13/n11653702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/pt191112-1-150x120.jpg" align ="left"></a>偏头痛是一种出现反复轻度或重度头痛的慢性疾病，通常这种头痛为单侧性质（仅涉及一侧头部），并伴有搏动，可持续2到72小时。相关症状可能包括恶心、呕吐、恐光（对光线更加敏感）、恐声（对声音更加敏感，怕吵），且肢体活动会加重疼痛的感觉。 三分之一的偏头痛患者均能感到病症先兆：短暂的视觉、感觉、语言或肢体障碍都意味着头痛即将发.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 4:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656080.md#1" target="_blank">【胡乃文开讲】长期便秘恐致癌？按4个穴位 改善便秘超有效</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/constipation2-1114-150x120.jpg" align ="left"></a>你有便秘的困扰吗？你知道长期便秘，有可能造成大肠癌吗？现在的年轻人、上班族多半久坐、压力大，而且爱吃比较精致的食品，这些都有可能造成便秘，而且有些人便秘非常严重。胡乃文中医师告诉你怎样按穴位、怎么吃能够改善便秘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/15/n11657620.md#1" target="_blank">汽车维修问与答：CEL亮灯要检查故障码</a><br></h3>汽车维修问与答
-
-读者Wei问：李先生您好！我太太的车是2000年Toyota Corolla、已跑了137,125英里。前一阵Check Engine Light亮起同时闻到橡胶？塑胶？烧焦的味道，修车师傅给换了Carbon Canister Assembly（77790-02102），跑了2天当开启除雾器（de.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11656437.md#1" target="_blank">话梅乌鸡的失心疯和他的复兴号</a><br></h3>“话梅乌鸡”不是一道菜，而是一个人，或许只能称之为一个生物学上的人。他其实是我的一个同事，南方人，四十岁左右，个子不高、微有驼背。他人不坏，工作也很卖力，尽管穿着有些邋遢。
-
-他原名贾爱国，英文名好像叫卢瑟什么的，因为和英文单词Loser（汉语翻译为失败者或怂货、孬种）发音很相似。为了避嫌，我们当面喊他老贾，私底下.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 4:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_9.htm">http://www.epochtimes.com/gb/news2008_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
