--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717514.md#1" target="_blank">几十只北极熊围困俄村庄 村民以照明弹驱赶</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717514.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-52378963-320x200.jpg" align ="left"></a>几十只饥饿的北极熊近日围困俄罗斯远东地区的一个村庄，只因为它们想到这里来寻找食物。村民们组成巡逻队以保护该村庄的安全，还有人发射照明弹驱赶它们，但似乎不奏效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:59 PM	</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713068.md#1" target="_blank">《睡眠救赎》搬到乡下依旧半夜惊醒</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586485614-150x120.jpg" align ="left"></a>她退休后选择搬到乡下宁静的社区居住，乡下的环境和城市比起来，真的安静许多。但到了深夜，只要是有任何风吹草动或虫鸣鸟叫的声音， 她都会被这些声音所吵醒，虽然还都能入梦， 但是几年下来，身体很明显比过去住在城市里还差。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank">凭蘑菇打开世界市场 秘诀：失败是财富绝不放弃</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37c1339eff365b8ee9fe65d06938a073-150x120.jpg" align ="left"></a>仅凭蘑菇，能成为世界级的CEO吗？Green Co.Ltd朴熙珠代表在蘑菇上倾注了一切，建立公司37年之际，已经出口到四十多个国家，每年销售额达到1000亿韩元。韩国国内市场上流通的蘑菇，其中一半是张代表公司的产品。韩国国内八个工厂每天生产的蘑菇量高达八吨，另外还设有海外工厂，仅中国、英国、德国三国就多达六处。生产于庆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank">随时能做的“单脚站立” 有效防骨松 还有3大好处</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/stand-with-one-leg-1-1211-150x120.jpg" align ="left"></a>进入更年期的妇女以及65岁以上的老人，通过适度且简单的负重运动，例如单脚站立，能减缓骨质流失的速度，还能增加肌力和体能、保护关节，并保持良好的平衡感，避免摔倒而骨折。单脚站立对健康有着很多好处。单脚站立随时随地可进行，有两种做法。方法一：单脚抬高离地约5公分，站立1分钟，双脚各练习6次。膝盖痛能做单脚站立吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank">单脚站立：1招防骨松增肌力 有3大好处</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/stand-with-one-leg-1-1211-150x120.jpg" align ="left"></a>进入更年期的妇女以及65岁以上的老人，通过适度且简单的负重运动，例如单脚站立，能减缓骨质流失的速度，还能增加肌力和体能、保护关节，并保持良好的平衡感，避免摔倒而骨折。单脚站立对健康有着很多好处。单脚站立随时随地可进行，有两种做法。方法一：单脚抬高离地约5公分，站立1分钟，双脚各练习6次。膝盖痛能做单脚站立吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:29 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717491.md#1" target="_blank">紧凑型SUV——2020马自达CX-30</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717491.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191212-Chi-Jin-Mazda-CX-30-01-150x120.jpg" align ="left"></a>Mazda CX-30是马自达2019年在日内瓦车展推出的一款全新紧凑型SUV。基于第四代马自达3车型打造，介于CX-3和CX-5之间的一款车型，并且延续了马自达KODO的设计。
 
 CX-30前脸的造型依旧可以看到新一代马自达3身上的影子，都是采用马自达家族式的混动设计，但是细细端详在视觉上，又显得比马3扁一点。进.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:47 PM			</td></tr>
